@@ -46,8 +46,7 @@ AddFactories::AddFactories()
             id = obj.id
             idc = classize(id)
             self.write("""
-    objectFactory.addFactory("%(id)s", 
-        (FactoryMethod)&%(namespace)s%(idc)s::factory);
+    objectFactory.addFactory("%(id)s", &%(namespace)s%(idc)s::factory);
 """ % vars()) #"for xemacs syntax highlighting
         self.write("""}
 
@@ -73,16 +72,17 @@ Root Factories::createObject(const MapType & msg_map)
 
     // is this instance of entity or operation?
     MapType::const_iterator I = msg_map.find("objtype");
+    MapType::const_iterator Iend = msg_map.end();
     bool is_instance = false;
-    if(I != msg_map.end() && I->second.isString()) {
-        const std::string & objtype = I->second.asString();
+    if(I != Iend && I->second.isString()) {
+        const std::string & objtype = I->second.String();
         if(objtype == "op" || objtype == "obj" || objtype == "object") {
             // get parent
             I = msg_map.find("parents");
-            if(I != msg_map.end()) {
-                const ListType & parents_lst = I->second.asList();
+            if(I != Iend && I->second.isList()) {
+                const ListType & parents_lst = I->second.List();
                 if(parents_lst.size()>=1 && parents_lst.front().isString()) {
-                    const std::string & parent = parents_lst.front().asString();
+                    const std::string & parent = parents_lst.front().String();
                     // objtype and parent ok, try to create it:
                     if(objectFactory.hasFactory(parent)) {
                         obj = objectFactory.createObject(parent);
@@ -97,7 +97,7 @@ Root Factories::createObject(const MapType & msg_map)
         // Should we really use factory? Why not just instantiate by hand?
         obj = objectFactory.createObject("anonymous");
     } // not instance
-    for (I = msg_map.begin(); I != msg_map.end(); I++) {
+    for (I = msg_map.begin(); I != Iend; I++) {
         obj->setAttr(I->first, I->second);
     }
     return obj;
