@@ -1,5 +1,14 @@
 2005-04-28  Al Riddoch  <alriddoch@zepler.org>
 
+	* Atlas/Objects/SmartPtr.h, Atlas/Objects/GenerateObjectFactory.py:
+	  Make the footprint of SmartPtr factory the same, and get rid
+	  of the nasty C cast from the factory code. Make conversion more
+	  efficient by using iterators better.
+
+	* Atlas/Objects/GenerateDecoder.py: Clean up formatting.
+
+2005-04-28  Al Riddoch  <alriddoch@zepler.org>
+
 	* Atlas/Objects/GenerateDecoder.py: Cleanups.
 
 	* Atlas/Objects/GenerateObjectFactory.py,
